// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuotationStopCoordinatesDto invalid response for lat not a allowed value abc 1`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "matches": "lat must match /^(\\+|-)?(?:90(?:(?:\\.0{1,6})?)|(?:[0-9]|[1-8][0-9])(?:(?:\\.[0-9]{1,6})?))$/ regular expression",
    },
    "property": "lat",
    "value": "abc",
  },
]
`;

exports[`QuotationStopCoordinatesDto invalid response for lng not a allowed value abc 1`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "matches": "lng must match /^(\\+|-)?(?:180(?:(?:\\.0{1,6})?)|(?:[0-9]|[1-9][0-9]|1[0-7][0-9])(?:(?:\\.[0-9]{1,6})?))$/ regular expression",
    },
    "property": "lng",
    "value": "abc",
  },
]
`;

exports[`QuotationStopCoordinatesDto invalid response for missing lat 1`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "isString": "lat must be a string",
      "matches": "lat must match /^(\\+|-)?(?:90(?:(?:\\.0{1,6})?)|(?:[0-9]|[1-8][0-9])(?:(?:\\.[0-9]{1,6})?))$/ regular expression",
    },
    "property": "lat",
    "value": undefined,
  },
]
`;

exports[`QuotationStopCoordinatesDto invalid response for missing lng 1`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "isString": "lng must be a string",
      "matches": "lng must match /^(\\+|-)?(?:180(?:(?:\\.0{1,6})?)|(?:[0-9]|[1-9][0-9]|1[0-7][0-9])(?:(?:\\.[0-9]{1,6})?))$/ regular expression",
    },
    "property": "lng",
    "value": undefined,
  },
]
`;

exports[`QuotationStopDto invalid response for missing address 1`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "isString": "address must be a string",
    },
    "property": "address",
    "value": undefined,
  },
]
`;
